--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,14 +5,14 @@ error.status=Status:
 error.message=Message:
 
 # Activation e-mail
-email.activation.title=ZDPortal account activation
+email.activation.title=StackPortal account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your ZDPortal account has been created, please click on the URL below to activate it:
+email.activation.text1=Your StackPortal account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=ZDPortal Team.
+email.signature=StackPortal Team.
 
 # Reset e-mail
-email.reset.title=ZDPortal password reset
+email.reset.title=StackPortal password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your ZDPortal account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your StackPortal account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
